--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cjango/dingtalk",
+    "name": "hefangxuan/dingtalk",
     "description": "dingtalk sdk",
     "keywords": ["cjango", "dingtalk", "sdk", "code"],
     "homepage": "https://github.com/cjango/dingtalk",
